--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/javaws
-spring.datasource.username=test
+spring.datasource.username=test1
 spring.datasource.password=123
 # Disabled persistence for development
 spring.sql.init.mode=always
 spring.jpa.database=MYSQL
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=validate
